# foundry-oracle

./: .gitignore  README.md  pyproject.toml
foundry-module/: module.json
foundry-module/lang/: en.json
foundry-module/scripts/: main.js
foundry-module/styles/: module.css
input/transcripts/: session-20251130.txt
service/: ingest.py  main.py
service/data/: ingest_state.json
